# Testing

./: .gitattributes  .gitignore  README.md  processing.py  pyproject.toml  requirements.txt  u2net_displayresults.py  u2net_human_seg_test.py  u2net_human_seg_test2.py
processed_results/all/all/all/: all.pkl
processed_results/sid/seq/view/: view.pkl
test_data/test_human_images_results/: processed_images.npy
