[tool.poetry]
name = "Testing"
version = "0.1.0"
description = "Description of your project"
authors = ["Your Name"]
license = "MIT"
readme = "README.md"
homepage = "https://yourprojecthomepage.com"
repository = "https://github.com/yourrepository"
documentation = "https://yourdocumentation.com"
keywords = ["python", "dependencies", "project"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = "^3.10"
asttokens = "2.4.1"
comm = "0.2.2"
contourpy = "1.3.1"
cycler = "0.12.1"
debugpy = "1.8.9"
decorator = "5.1.1"
exceptiongroup = "1.2.2"
executing = "2.1.0"
filelock = "3.16.1"
fonttools = "4.55.1"
fsspec = "2024.10.0"
imageio = "2.36.1"
ipykernel = "6.29.5"
ipython = "8.29.0"
jedi = "0.19.2"
jupyter_client = "8.6.3"
jupyter_core = "5.7.2"
kiwisolver = "1.4.7"
lazy_loader = "0.4"
matplotlib = "3.9.3"
matplotlib-inline = "0.1.7"
mpmath = "1.3.0"
nest-asyncio = "1.6.0"
networkx = "3.4.2"
numpy = "2.1.3"
nvidia-cublas-cu12 = "12.4.5.8"
nvidia-cuda-cupti-cu12 = "12.4.127"
nvidia-cuda-nvrtc-cu12 = "12.4.127"
nvidia-cuda-runtime-cu12 = "12.4.127"
nvidia-cudnn-cu12 = "9.1.0.70"
nvidia-cufft-cu12 = "11.2.1.3"
nvidia-curand-cu12 = "10.3.5.147"
nvidia-cusolver-cu12 = "11.6.1.9"
nvidia-cusparse-cu12 = "12.3.1.170"
nvidia-nccl-cu12 = "2.21.5"
nvidia-nvjitlink-cu12 = "12.4.127"
nvidia-nvtx-cu12 = "12.4.127"
opencv-python = "4.10.0.84"
parso = "0.8.4"
pillow = "11.0.0"
platformdirs = "4.3.6"
prompt_toolkit = "3.0.48"
pure_eval = "0.2.3"
python-dateutil = "2.9.0.post0"
pyzmq = "26.2.0"
scikit-image = "0.24.0"
scipy = "1.14.1"
stack-data = "0.6.3"
sympy = "1.13.1"
tifffile = "2024.9.20"
torchvision = "0.20.0"
tornado = "6.4.2"
traitlets = "5.14.3"
typing_extensions = "4.12.2"
wcwidth = "0.2.13"
torch = "2.5.0"
tqdm = "^4.67.1"

[tool.poetry.dev-dependencies]
# Add development dependencies here if needed
